// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema descriptions > matches snapshot: CharacterCanonical 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "ageCheck",
    "attributes",
    "bio",
    "blockedTags",
    "contentRating",
    "createdAt",
    "createdBy",
    "id",
    "kind",
    "lineageId",
    "name",
    "source",
    "status",
    "updatedAt",
    "updatedBy",
    "version",
  ],
  "typeName": "ZodObject",
}
`;

exports[`schema descriptions > matches snapshot: CharacterInstance 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "attributes",
    "canonicalId",
    "changePolicy",
    "createdAt",
    "createdBy",
    "id",
    "kind",
    "mutableAttributes",
    "name",
    "sessionId",
    "updatedAt",
    "updatedBy",
  ],
  "typeName": "ZodObject",
}
`;

exports[`schema descriptions > matches snapshot: MemoryInstance 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "attributes",
    "canonicalId",
    "changePolicy",
    "createdAt",
    "createdBy",
    "decayPolicy",
    "id",
    "kind",
    "mutableAttributes",
    "salience",
    "scope",
    "updatedAt",
    "updatedBy",
    "vector",
  ],
  "typeName": "ZodObject",
}
`;

exports[`schema descriptions > matches snapshot: RelationshipInstance 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "attributes",
    "boundaries",
    "canonicalId",
    "changePolicy",
    "consentFlags",
    "createdAt",
    "createdBy",
    "history",
    "id",
    "intensity",
    "kind",
    "mutableAttributes",
    "participants",
    "romance",
    "stage",
    "typeRef",
    "updatedAt",
    "updatedBy",
  ],
  "typeName": "ZodObject",
}
`;

exports[`schema descriptions > matches snapshot: RelationshipTypeCanonical 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "ageCheck",
    "allowedParticipants",
    "attributes",
    "blockedTags",
    "contentRating",
    "createdAt",
    "createdBy",
    "defaultStages",
    "exclusivity",
    "id",
    "intimacyEscalationAllowed",
    "kind",
    "lineageId",
    "name",
    "romanceEnabled",
    "source",
    "status",
    "updatedAt",
    "updatedBy",
    "version",
  ],
  "typeName": "ZodObject",
}
`;

exports[`schema descriptions > matches snapshot: SceneInstance 1`] = `
{
  "description": undefined,
  "options": undefined,
  "shapeKeys": [
    "attributes",
    "beats",
    "canonicalId",
    "changePolicy",
    "createdAt",
    "createdBy",
    "id",
    "kind",
    "mutableAttributes",
    "participants",
    "sessionId",
    "settingRef",
    "summary",
    "tags",
    "title",
    "updatedAt",
    "updatedBy",
  ],
  "typeName": "ZodObject",
}
`;
